# 3D-Satellite-Orbit-Simulation

./: '  .main.cpp.swp  CMakeLists.txt  README.md
include/: attitude.h  camera.h  camera_controller.h  constants.h  cube.h  functions_main.h  geometric_data.h  nadir_controller.h  reaction_wheel.h  reaction_wheel_system.h  simulation_state.h  sphere.h  telemetry_display.h  text_renderer.h
include/glad/: glad.h
include/shaders/: cubesat.fs  earth.fs  skybox.vs  text.fs
past_examples/: Camera.h  Mesh.h  Model.cpp  Model.h
past_examples/lessons/: camera.cpp  coordinatesystem.cpp  intro.cpp  lightingmaps.3.3.shader.fs  lightingmaps.cpp  materials.3.3.shader.fs  materials.cpp
src/: attitude.cpp  camera_controller.cpp  cube.cpp  functions_main.cpp  glad.c  main.cpp  nadir_controller.cpp  reaction_wheel.cpp  reaction_wheel_system.cpp  sphere.cpp  telemetry_display.cpp  text_renderer.cpp
src/copies/: main2.cpp  nadir_controller2.cpp  reaction_wheel2.cpp  reaction_wheel_system2.cpp  text_renderer2.cpp
